# patchparser

./: README.md  pyproject.toml  setup.py
.github/workflows/: codeql.yml  python-package.yml
patchparser/: __init__.py  github_parser.py  github_parser_local.py
patchparser/utils/: __init__.py  github_helper.py
src/patchparser/: github_parser.py  github_parser_local.py
tests/: test_github_parser.py  test_github_parser_local.py
