[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patchparser"
version = "0.0.1"
authors = [
  { name="Trevor Dunlap", email="tdunlap607@gmail.com" },
]
description = "A python package to extract features from a commit patch."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
]
dependencies = [
  'requests'
]

[project.urls]
"Homepage" = "https://github.com/tdunlap607/patchparser"
"Bug Tracker" = "https://github.com/tdunlap607/patchparser/issues"